--- a/Views/EUVView.xaml
+++ b/Views/EUVView.xaml
@@ -4,7 +4,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             d:DesignHeight="1450" d:DesignWidth="800" Background="White">
+             d:DesignHeight="450" d:DesignWidth="800">
     <!--Default Height "450" Width "800"-->
     <Grid>
         <Grid.ColumnDefinitions>
@@ -14,12 +14,12 @@
         </Grid.ColumnDefinitions>
         <StackPanel  Grid.Column="1">
             <Label Content="Interview guide til RKV elever"  FontSize="18" FontWeight="Bold" FontStyle="Italic" />
-            <Border x:Name="bdrEducation" BorderBrush="Gray" BorderThickness="1">
+            <Border x:Name="bdrEducation" Style="{StaticResource bdrEUV2}">
                 <StackPanel>
                     <DockPanel>
                         <Label Content="Uddannelse:"  Style="{StaticResource lblOverskrift2}"/>
                         <StackPanel HorizontalAlignment="Stretch">
-                            <Label  Content="Hvilken uddannelse ønske du at påbegynde?" FontSize="16" HorizontalAlignment="Center" />
+                            <TextBlock  Text="Hvilken uddannelse ønske du at påbegynde?" Style="{StaticResource txtEUVSprg}"/>
                             <ComboBox x:Name="cmbEducation" Width="240" />
                         </StackPanel>
                     </DockPanel>
@@ -31,26 +31,26 @@
                     <DockPanel>
                         <Label Content="Adresse:"  Style="{StaticResource lblOverskrift2}"/>
                         <StackPanel HorizontalAlignment="Stretch">
-                            <TextBlock TextWrapping="WrapWithOverflow" Text="Hvilken adresse ønske du at starte på?" FontSize="16" HorizontalAlignment="Center" />
+                            <TextBlock Text="Hvilken adresse ønske du at starte på?" Style="{StaticResource txtEUVSprg}"/>
                             <ComboBox x:Name="cmbUddannelse" Width="200" />
                         </StackPanel>
                     </DockPanel>
                 </StackPanel>
             </Border>
             <Separator Style="{StaticResource SepSpaceH}" />
-            <Border BorderBrush="Gray" BorderThickness="1" Style="{StaticResource bdrEUV2}">
+            <Border Style="{StaticResource bdrEUV2}">
                 <StackPanel>
                     <DockPanel>
                         <Label Content="EUV1:"  Style="{StaticResource lblOverskrift2}"/>
                         <StackPanel HorizontalAlignment="Stretch">
-                            <Label  Content="Har du 2 års relevant erhvervserfaring, inde for de sidste 5 år?" FontSize="16" HorizontalAlignment="Center" />
+                            <TextBlock Text="Har du 2 års relevant erhvervserfaring, inde for de sidste 5 år?" Style="{StaticResource txtEUVSprg}"/>
                             <DockPanel Style="{StaticResource docKnapH}">
-                                <RadioButton x:Name="rbEuv1Ja" GroupName="grpeuv1" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Ja">
+                                <RadioButton x:Name="rbEuv1Ja" GroupName="grpeuv1" Style="{StaticResource rbtnJa}">
                                     <RadioButton.RenderTransform>
                                         <ScaleTransform ScaleX="1.6" ScaleY="1.6" />
                                     </RadioButton.RenderTransform>
                                 </RadioButton>
-                                <RadioButton x:Name="rbEuv1Nej" GroupName="grpeuv1" Content="Nej" Style="{StaticResource rbnNej}">
+                                <RadioButton x:Name="rbEuv1Nej" GroupName="grpeuv1" Style="{StaticResource rbtnNej}">
                                     <RadioButton.RenderTransform>
                                         <ScaleTransform ScaleX="1.6" ScaleY="1.6" />
                                     </RadioButton.RenderTransform>
@@ -112,18 +112,18 @@
                                     </StackPanel>
                                 </Border>
                                 <Separator Style="{StaticResource SepSpaceH}" />
-                                <Border x:Name="bdrEuv1Svar" Style="{StaticResource bdrEUV}">
+                                <Border x:Name="bdrEuv1Svar" Style="{StaticResource bdrEUV2}">
                                     <DockPanel>
                                         <Label Content="EUV1:" Style="{StaticResource lblOverskrift2}"/>
                                         <StackPanel HorizontalAlignment="Stretch">
-                                            <TextBlock Text="Passer disse spørgsmål til din erfaring?" FontSize="16" HorizontalAlignment="Center" />
+                                            <TextBlock Text="Passer disse spørgsmål til din erfaring?" Style="{StaticResource txtEUVSprg}"/>
                                             <DockPanel Name="docEuv1Sprg" Style="{StaticResource docKnapH}">
-                                                <RadioButton x:Name="rbEuv1SprgJa" GroupName="grpEuv1Sprg" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Ja">
+                                                <RadioButton x:Name="rbEuv1SprgJa" GroupName="grpEuv1Sprg" Style="{StaticResource rbtnJa}">
                                                     <RadioButton.RenderTransform>
                                                         <ScaleTransform ScaleX="1.6" ScaleY="1.6" />
                                                     </RadioButton.RenderTransform>
                                                 </RadioButton>
-                                                <RadioButton x:Name="rbEuv1SprgNej" GroupName="grpEuv1Sprg" Content="Nej" Style="{StaticResource rbnNej}">
+                                                <RadioButton x:Name="rbEuv1SprgNej" GroupName="grpEuv1Sprg" Content="Nej" Style="{StaticResource rbtnNej}">
                                                     <RadioButton.RenderTransform>
                                                         <ScaleTransform ScaleX="1.6" ScaleY="1.6" />
                                                     </RadioButton.RenderTransform>
@@ -142,15 +142,15 @@
                                 <Label Content="EUV2:"  Style="{StaticResource lblOverskrift2}"/>
                                 <StackPanel HorizontalAlignment="Stretch" >
 
-                                    <TextBlock TextWrapping="WrapWithOverflow" TextAlignment="Center"  Text="Har du en dokumenteret afsluttet uddannelse?" FontSize="16"  />
-                                    <TextBlock TextWrapping="WrapWithOverflow" TextAlignment="Center"  Text="Har du mindre end 2 års relevant dokumenteret erhvervserfaring." FontSize="16"  />
+                                    <TextBlock Text="Har du en dokumenteret afsluttet uddannelse?" Style="{StaticResource txtEUVSprg}"/>
+                                    <TextBlock Text="Har du mindre end 2 års relevant dokumenteret erhvervserfaring." Style="{StaticResource txtEUVSprg}"/>
                                     <DockPanel Style="{StaticResource docKnapH}">
-                                        <RadioButton x:Name="rbEuv2Ja" Content="Ja" HorizontalAlignment="Right" VerticalAlignment="Center">
+                                        <RadioButton x:Name="rbEuv2Ja" Style="{StaticResource rbtnJa}">
                                             <RadioButton.RenderTransform>
                                                 <ScaleTransform ScaleX="1.6" ScaleY="1.6" />
                                             </RadioButton.RenderTransform>
                                         </RadioButton>
-                                        <RadioButton x:Name="rbEuv2Nej" Content="Nej" Style="{StaticResource rbnNej}">
+                                        <RadioButton x:Name="rbEuv2Nej" Content="Nej" Style="{StaticResource rbtnNej}">
                                             <RadioButton.RenderTransform>
                                                 <ScaleTransform ScaleX="1.6" ScaleY="1.6" />
                                             </RadioButton.RenderTransform>
@@ -167,15 +167,15 @@
                 <DockPanel x:Name="stackSps">
                     <Label Content="SPS:" Style="{StaticResource lblOverskrift2}"/>
                     <StackPanel>
-                        <TextBlock TextWrapping="WrapWithOverflow" Text="Har du modtaget særlige støtte" FontSize="16" HorizontalAlignment="Center" />
-                        <TextBlock TextWrapping="WrapWithOverflow" Text="eller ønsker du at søge om særlige pædagogiske støtte?" FontSize="16" HorizontalAlignment="Center" />
+                        <TextBlock Text="Har du modtaget særlige støtte" Style="{StaticResource txtEUVSprg}"/>
+                        <TextBlock Text="eller ønsker du at søge om særlige pædagogiske støtte?" Style="{StaticResource txtEUVSprg}"/>
                         <DockPanel Style="{StaticResource docKnapH}">
-                            <RadioButton x:Name="rbSpsJa" Content="Ja" HorizontalAlignment="Right" VerticalAlignment="Center">
+                            <RadioButton x:Name="rbSpsJa" Style="{StaticResource rbtnJa}">
                                 <RadioButton.RenderTransform>
                                     <ScaleTransform ScaleX="1.6" ScaleY="1.6" />
                                 </RadioButton.RenderTransform>
                             </RadioButton>
-                            <RadioButton x:Name="rbSpsNej" Content="Nej" Style="{StaticResource rbnNej}">
+                            <RadioButton x:Name="rbSpsNej" Content="Nej" Style="{StaticResource rbtnNej}">
                                 <RadioButton.RenderTransform>
                                     <ScaleTransform ScaleX="1.6" ScaleY="1.6" />
                                 </RadioButton.RenderTransform>
@@ -189,14 +189,14 @@
                 <DockPanel x:Name="stackEud">
                     <Label Content="EUD:"  Style="{StaticResource lblOverskrift2}"/>
                     <StackPanel>
-                        <TextBlock TextWrapping="WrapWithOverflow" Text="Ønsker du en samtale med en EUD vejleder?" FontSize="16" HorizontalAlignment="Center"/>
+                        <TextBlock Text="Ønsker du en samtale med en EUD vejleder?" Style="{StaticResource txtEUVSprg}"/>
                         <DockPanel Style="{StaticResource docKnapH}">
-                            <RadioButton x:Name="rbEudJa" Content="Ja" HorizontalAlignment="Right" VerticalAlignment="Center">
+                            <RadioButton x:Name="rbEudJa" Style="{StaticResource rbtnJa}">
                                 <RadioButton.RenderTransform>
                                     <ScaleTransform ScaleX="1.6" ScaleY="1.6" />
                                 </RadioButton.RenderTransform>
                             </RadioButton>
-                            <RadioButton x:Name="rbEudNej" Content="Nej" Style="{StaticResource rbnNej}">
+                            <RadioButton x:Name="rbEudNej" Content="Nej" Style="{StaticResource rbtnNej}">
                                 <RadioButton.RenderTransform>
                                     <ScaleTransform ScaleX="1.6" ScaleY="1.6" />
                                 </RadioButton.RenderTransform>
