--- a/Views/VisitationsView.xaml
+++ b/Views/VisitationsView.xaml
@@ -5,10 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:GFElevInterview.Views"
              mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800" Background="White">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <StackPanel>
-            <Label Content="Interview guide til Visitations elever"  Style="{StaticResource labVisitation}" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.1*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="0.1*" />
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="1">
+            <Label Content="Interview guide til Visitations elever"  Style="{StaticResource lblVisitation}" />
             <Border x:Name="bdrEducation" Style="{StaticResource bdrVisitation}" Width="600">
                 <DockPanel>
                     <Label Content="Uddannelse:"  Style="{StaticResource lblOverskrift2}"/>
@@ -33,8 +38,8 @@
                 <DockPanel>
                     <Label Content="SPS:"  Style="{StaticResource lblOverskrift2}"/>
                     <StackPanel VerticalAlignment="Center">
-                        <TextBlock TextWrapping="WrapWithOverflow" Text="Har du modtaget særlige støtte" FontSize="16" HorizontalAlignment="Center" Padding="0"/>
-                        <TextBlock TextWrapping="WrapWithOverflow" Text="eller ønsker du at søge om særlige pædagogiske støtte?" FontSize="16" HorizontalAlignment="Center" Padding="0"/>
+                        <TextBlock Text="Har du modtaget særlige støtte" Style="{StaticResource txtVisitation}"/>
+                        <TextBlock Text="eller ønsker du at søge om særlige pædagogiske støtte?" Style="{StaticResource txtVisitation}"/>
                         <DockPanel x:Name="docsps" Width="150" HorizontalAlignment="Center">
                             <RadioButton x:Name="rbSpsJa" GroupName="spsSupport" Content="Ja" HorizontalAlignment="Left" VerticalAlignment="Center">
                                 <RadioButton.RenderTransform>
@@ -55,7 +60,7 @@
                 <DockPanel>
                 <Label Content="EUD:"  Style="{StaticResource lblOverskrift2}"/>
                     <StackPanel VerticalAlignment="Center">
-                        <TextBlock TextWrapping="WrapWithOverflow" Text="Ønsker du en samtale med en EUD vejleder?" FontSize="16" HorizontalAlignment="Center"/>
+                        <TextBlock Text="Ønsker du en samtale med en EUD vejleder?" Style="{StaticResource txtVisitation}"/>
                         <DockPanel x:Name="docEud" Width="150">
                             <RadioButton x:Name="rbEudJa" GroupName="eudSupport" Content="Ja" HorizontalAlignment="Left" VerticalAlignment="Center">
                                 <RadioButton.RenderTransform>
